<resources>
    <string name="app_name">Name Quiz</string>
    <string name="title_database_list">Name</string>
    <string name="title_database_detail">Database Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="camera_button">Camera</string>
    <string name="add_button">Add</string>
    <string name="quiz_button">Start</string>
    <string name="quiz_list">Entry list</string>
    <string name="name_quiz">Name Quiz</string>
    <string name="add_person">Add new person</string>
    <string name="upload_button">Upload</string>
    <string name="name_field">Name:</string>
    <string name="imageView_Desc">ImageView for the uploaded picture</string>
    <string name="quiz_text">Who is this?</string>
    <string name="score">Score:</string>
    <string name="answer_button">Submit</string>
    <string name="delete_button">Delete entry</string>
    <string name="update_name">Name</string>
    <string name="update_button">Update Name</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Preference Titles -->
    <string name="private_header">Private settings</string>
    <string name="quiz_header">Quiz settings</string>

    <!-- Messages Preferences -->
    <string name="username_title">Username</string>
    <string name="reply_title">Store uploads in database for future use</string>

    <!-- Sync Preferences -->
    <string name="score_enabled_title">Take quiz with score</string>
    <string name="showScore_title">Show score </string>
    <string name="score_on">Shows score in top right hand corner of quiz</string>
    <string name="score_off">Not showing score </string>

</resources>
